# mining_protected_areas

./: compute_candidates.py  compute_intersections  compute_intersections.py  readme.md  requirements.txt  to_geojson.py  transform.py
images/: cancel.py  clip.py  readme.md  regions.py  sat.py  transform.py  util.py
intersections/: Cargo.toml  results.txt
intersections/src/: main.rs
map/: index.html  package-lock.json  package.json  style.css  webpack.config.js
map/src/: main.js
