[package]
name = "intersections"
version = "0.1.0"
authors = ["Francis Tseng <f+accounts@frnsys.com>"]
edition = "2018"

[dependencies]
geo = "0.12.2"
geojson = { version = "0.16.0", features = ["geo-types"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
pbr = "1.0.1"
rayon = "1.1"
